--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,16 @@
 {
-    "name": "escapestudios/wsse-authentication-bundle",
+    "name": "hintt/wsse-authentication-bundle",
     "type": "symfony-bundle",
-    "description": "Symfony2 bundle to implement WSSE authentication",
-    "keywords": ["wsse", "authentication", "bundle"],
+    "description": "Symfony2 bundle to implement WSSE authentication, with FOSUserbundle as user provider and symfony encode as password encoder",
+    "keywords": ["wsse", "authentication", "bundle", "FOSUserbundle"],
     "homepage": "https://github.com/escapestudios/EscapeWSSEAuthenticationBundle",
     "license": "MIT",
     "authors": [
         {
             "name": "David Joos",
-            "email": "david@escapestudios.com"
+            "email": "david@escapestudios.com",
+            "name": "Ron Hamersma",
+            "email": "ron@hintt.nl",
         },
         {
             "name": "Community contributors",
@@ -29,7 +31,7 @@
         "symfony/security-bundle": "2.2.*"
     },
     "autoload": {
-        "psr-0": { "Escape\\WSSEAuthenticationBundle": "" }
+        "psr-0": { "hintt\\WSSEAuthenticationBundle": "" }
     },
-    "target-dir": "Escape/WSSEAuthenticationBundle"
+    "target-dir": "hintt/WSSEAuthenticationBundle"
 }
