composer json format fix

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
     "authors": [
         {
             "name": "David Joos",
-            "email": "david@escapestudios.com",
+            "email": "david@escapestudios.com"
+        },
+        {
             "name": "Ron Hamersma",
             "email": "ron@hintt.nl",
         },
