composer json format fix again

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         },
         {
             "name": "Ron Hamersma",
-            "email": "ron@hintt.nl",
+            "email": "ron@hintt.nl"
         },
         {
             "name": "Community contributors",
